Fix the navbar z-index

--- a/src/pages/dashboard/Layout/Layout.module.scss
+++ b/src/pages/dashboard/Layout/Layout.module.scss
@@ -21,6 +21,7 @@
   transition: visibility 0.5s ease;
   box-shadow: 0px 5px 20px 0px #0000000a;
   height: calc(100vh - 102px);
+  z-index: 10;
 
   @media (max-width: 540px) {
     position: absolute;
@@ -36,6 +37,8 @@
 
   @media (max-width: 540px) {
     padding: 60px 27px 0px 27px;
+    height: 74vh;
+    overflow: auto;
   }
 }
 
