--- a/src/pages/dashboard/pages/Home/Table/Table.module.scss
+++ b/src/pages/dashboard/pages/Home/Table/Table.module.scss
@@ -54,7 +54,6 @@
   justify-content: space-between;
 
   & p {
-    line-height: 0px;
     font-size: 14px;
     font-weight: 400;
     color: #545f7d;
@@ -64,6 +63,7 @@
 .leftSection {
   display: flex;
   gap: 10px;
+  align-items: center;
 
   & > div {
     display: flex;
